[package]
name = "deployable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = { version = "1.1.3", features = ["streams"] }
futures-util = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3"
futures = { version = "0.3", default-features = false }
bytes = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
